# SuperNu

./: #matermod.f90#  #supernu.f90#  .gitignore  .gitlab-ci.yml  .hgignore  CMakeLists.txt  HEADER  LANL_COPYING  LANL_README  Makefile  Makefile.dependmod_beagle  Makefile.inc  README  README.TXT  README.md  a.out  advance.f90  analytic_opacity.f90  banner.f  bbxsmod.f  bcastreduce_values.txt  bfxsmod.f  binsrch.f90  boundary_source.f90  constmod.f90~  countersmod.f  data_mod.f90  data_mod.mod  dealloc_all.f  depend.sh  dependmodule.sh  diffusion1.f90  diffusion1alt.f90  diffusion1alt.f90~  driver.f90  elemdatamod.f  energy_check.f90  ffxsmod.f  fluxmod.f  fluxtally.f  (+68 more)
.github/: pull_request_template.md
Data/: data.bf_verner  data.ff_sutherland  data.gamma_profile  data.gamma_profiles  data.gamma_profiles_128  data.gamma_profiles_256  data.gamma_profiles_32  data.gamma_profiles_64  data.trad_profiles
Data/Atom/: c4.atom  h1.atom
Data/Atoms/: data.atom.c1  data.atom.c2  data.atom.c3
GAS/: Makefile  analytic_initial.f90  analytic_opacity.f90  analytic_source.f90  emission_probability.f90  emission_probability2.f90  eos_update.f  fleck_factor.f90  gas_setup.f  gas_update.f  leakage_opacity.f  leakage_opacity1.f90  leakage_opacity11.f90  leakage_opacity2.f90  leakage_opacity3.f90  opacity_planckmean.f  physical_opacity.f  physical_opacity_subgrid.f  tabular_opacity.f  temperature_update.f90
GASGRID/: Makefile  analytic_initial.f90  analytic_opacity.f90  analytic_source.f90  convert_cap2capros.f  emission_probability.f90  eos_update.f  fleck_factor.f90  gasgrid_setup.f  gasgrid_update.f  gasgrid_upold.f90  ggrid_setup.f  ggrid_update.f  grids.f90  gridvolume.f  initials.f90  leakage_opacity.f90  leakage_opacity1.f90  leakage_opacity2.f90  material_update.f90  opacity_calculation.f  opacity_planckmean.f  physical_opacity.f  physical_opacity_subgrid.f  temperature_update.f90  xsections.f90
GRID/: Makefile  emission_probability.f90  emitgroup.f  grid_setup.f  grid_update.f  grid_volume.f  leakage_opacity.f  leakage_opacity1.f90  leakage_opacity11.f90  leakage_opacity2.f90  leakage_opacity3.f90  read_temp_preset.f
Input/: input  input.bdf2.par  input.emiss.par  input.fend.par  input.fluxmu  input.fluxom  input.fluxwl  input.heav.par  input.par  input.restart  input.retlyrand  input.sand.par  input.str  input.str_128  input.str_256  input.str_emiss  input.str_r128  input.str_r256  input.str_r32  input.str_r64  input.str_sand_x64  input.surf.par  input.temp  input.temp_str  input.temp_str_r64  input.tsp_time  input.w7.par  input.wlgrid  wlgenadd.py
Input/Str_Setup_Scripts/: aug.py  elem_data.py  simplekn.py
MISC/: Makefile  binsrch.f90  lcase.f  locate.f  memstats.f  memusg.f  sorti.f  specint.f  specint3.f  warn.f
MULTIGROUP/: xsections.f90
Manual/: Bibliography.bib  Makefile  README  manual.tex
OPACITY/: Makefile
OUTPUT/: Makefile  open_logfiles.f  output_flux.f  output_gamflux.f  output_grid.f
SOURCE/: Makefile  analytic_initial.f90  boundary_source.f90  initial_particles.f90  initialnumbers.f90  interior_source.f90  rprocess_fitfrm_source.f90  source_transformdirection.f90  sourceenergy.f90  sourceenergy_analytic.f90  sourceenergy_misc.f  sourcenumbers.f90  tabular_source.f90  vacancies.f90
System/: Makefile.compiler.g95  Makefile.compiler.gfortran  Makefile.compiler.intel  Makefile.compiler.xlf_bgp
Systemscripts/: g95.sh  gfortran-4.4.3.sh  gfortran.sh  intel.sh  xlf_bgp.sh
TRANSPORT1/: Makefile  advection1.f90  advection11.f90  diffusion1.f90  diffusion11.f90  transport1.f90  transport11.f90  transport11_gamgrey.f90  transport1_gamgrey.f90
TRANSPORT2/: Makefile  advection2.f90  diffusion2.f90  transport2.f90  transport2_gamgrey.f90
TRANSPORT3/: Makefile  advection3.f90  diffusion3.f90  transport3.f90  transport3_gamgrey.f90
Testsuite/: README
Testsuite/first/: input.par  reference.Lum  reference.flx_luminos  reference.gas_fcoef  reference.grd_fcoef  reference.grd_temp  reference.temp  reference.tsp_time  test.sh
Testsuite/second/: input.par  reference.Lum  reference.gas_fcoef  reference.temp  reference.tsp_time  test.sh
Tools/: calc_comv_taus.py  calc_tau.py  dependmodule2.sh  hgversioninfo.py  lndir.sh  plot_grid_data.py  plot_group_grid_data.py  renoutput.sh  sgfilter.py  unusedmodules.sh  wlgenadd.py
